--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,12 @@ ADS_IMAGES_PATH=images/ads
 DB_PROTOCOL=mongodb
 DB_HOST=localhost
 DB_PORT=27017
-DB_NAME=nodepop
+DB_NAME=melpop
+DB_USER=
+DB_PWD=
 
 API_TOTAL_ITEMS_LIMIT=24
 API_PAGE_ITEMS_LIMIT=6
 API_PAGE_LIMIT=8
+
+JWT_SECRET=use_your_secret_string
