--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "nodepop",
+  "name": "melpop",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env DEBUG=nodepop:* nodemon",
+    "dev": "cross-env DEBUG=melpop:* nodemon",
     "installDB": "node install_db.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
@@ -16,6 +17,7 @@
     "express-paginate": "^1.0.0",
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.5",
     "morgan": "~1.9.0"
   },
