--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,17 @@
 PROTOCOL=http
 HOST=localhost
 PORT=3003
+
 ADS_IMAGES_PATH=images/ads
+ADS_TAGS=lifestyle,work,motor,mobile
 
 DB_PROTOCOL=mongodb
 DB_HOST=localhost
 DB_PORT=27017
 DB_NAME=melpop
-DB_USER=
-DB_PWD=
+DB_USER_PWD=user:pass@
 
+API_PATH=apiv1
 API_TOTAL_ITEMS_LIMIT=24
 API_PAGE_ITEMS_LIMIT=6
 API_PAGE_LIMIT=8
