--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env DEBUG=melpop:* nodemon",
-    "installDB": "node install_db.js"
+    "dev": "cross-env DEBUG=nodeapi:* NODE_ENV=development nodemon",
+    "installDB": "node install_db.js",
+    "thumbSrv": "node ./services/thumbnailService.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
+    "cote": "^0.18.0",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-paginate": "^1.0.0",
+    "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.7.1",
+    "i18n": "^0.8.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.5",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^1.4.1",
+    "sharp": "^0.21.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
