Problem pending  EBUSY: resource busy or locked, unlink

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cluster": "node ./bin/cluster",
     "installDB": "node install_db.js",
     "thumbSrv": "node ./services/thumbnailService.js",
-    "test": "mocha --timeout 5000 ./test/*.test.js"
+    "thumbScb": "node ./services/thumbnailSubscriber.js",
+    "test": "mocha --timeout 15000 ./test/*.test.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "assert": "^1.4.1",
+    "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.2.0",
     "eslint-config-standard": "^11.0.0",
